# swgoh-personal-gac-history

./: .gitignore  README.md  pyproject.toml
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/public/data/: battles.json  units.json
dashboard/src/: App.vue  style.css
dashboard/src/components/: BattleDetail.vue  CounterResults.vue  EnemySearch.vue  FacetBar.vue  TeamRow.vue
dashboard/src/composables/: useCounters.js  useUnits.js
scripts/: build_dataset.py  fetch_units.py  main.py
swgoh_scraper/: __init__.py  cli.py  config.py  scraper.py  utils.py
